[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-tool"
version = "0.1.0"
description = "Python bindings for lambda-Tool: safe LLM tool composition"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{name = "Sarthak Shah"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/matchcase/lambda-tool-python"
Repository = "https://github.com/matchcase/lambda-tool-python"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
